# python-template-test

./: .tool-versions  Makefile  README.md  pyproject.toml
.github/workflows/: draft-release.yaml  increment-tagged-version.yaml  label-pull-request.yaml  python-tests.yaml  release.yaml  unit-tests.yaml  validate-branch-name.yaml
docs/: release-workflow.md
src/hello/: hello.py
test/unit/: test_hello.py
