[project]
name = "python-module-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.1",
]

[tool.setuptools]
package-dir = {launch="src/hello"}

[tool.pytest.ini_options]
pythonpath = "src"
minversion = "7.0"
addopts = "-ra --cov=src --cov-fail-under=80 --no-cov-on-fail"
testpaths = [
    "test"
]